--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-timer-mixin": "^0.13.3",
     "recompose": "^0.27.0"
   },
   "scripts": {
